--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
-  "framework": "nextjs",
-  "buildCommand": "cd apps/web && npm run build",
+  "buildCommand": "cp apps/web/package-standalone.json apps/web/package.json && cp apps/web/next.config.standalone.js apps/web/next.config.js && cd apps/web && npm install && npm run build",
   "outputDirectory": "apps/web/.next",
-  "installCommand": "npm install --legacy-peer-deps"
+  "installCommand": "echo 'Using custom build command'",
+  "framework": "nextjs"
 }
