--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,7 +1,5 @@
 {
   "version": 2,
-  "framework": "nextjs",
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "installCommand": "npm install --legacy-peer-deps"
+  "buildCommand": "pnpm build",
+  "installCommand": "pnpm install"
 }
