--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
-  "framework": "nextjs",
-  "buildCommand": "npm run build", 
-  "outputDirectory": ".next",
-  "installCommand": "npm install --legacy-peer-deps"
+  "buildCommand": "cd apps/web && pnpm build",
+  "installCommand": "pnpm install",
+  "framework": "nextjs"
 }
